kubernetes/03-实践记录/gitlab-ingress-gitlab--all-jicheng.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      acme.cert-manager.io/http01-edit-in-place: "true"
      cert-manager.io/issuer: gitlab-issuer
      kubernetes.io/ingress.provider: nginx
      meta.helm.sh/release-name: gitlab
      meta.helm.sh/release-namespace: gitlab
      nginx.ingress.kubernetes.io/custom-http-errors: ""
      nginx.ingress.kubernetes.io/proxy-buffering: "off"
    creationTimestamp: "2026-04-13T15:05:45Z"
    generation: 1
    labels:
      app: kas
      app.kubernetes.io/managed-by: Helm
      chart: kas-9.10.3
      heritage: Helm
      release: gitlab
    name: gitlab-kas
    namespace: gitlab
    resourceVersion: "39182"
    uid: 051cfa89-7681-45b9-9236-13e958796ec3
  spec:
    ingressClassName: gitlab-nginx
    rules:
    - host: kas.example.com
      http:
        paths:
        - backend:
            service:
              name: gitlab-kas
              port:
                number: 8154
          path: /k8s-proxy/
          pathType: Prefix
        - backend:
            service:
              name: gitlab-kas
              port:
                number: 8150
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - kas.example.com
      secretName: gitlab-kas-tls
  status:
    loadBalancer: {}
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.provider: nginx
      meta.helm.sh/release-name: gitlab
      meta.helm.sh/release-namespace: gitlab
      nginx.ingress.kubernetes.io/proxy-body-size: "0"
      nginx.ingress.kubernetes.io/proxy-buffering: "off"
      nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
      nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    creationTimestamp: "2026-04-13T15:05:45Z"
    generation: 1
    labels:
      app: minio
      app.kubernetes.io/managed-by: Helm
      chart: minio-0.4.3
      heritage: Helm
      release: gitlab
    name: gitlab-minio
    namespace: gitlab
    resourceVersion: "39189"
    uid: e46b1699-35e6-49d6-9720-3cc02b3eef3e
  spec:
    ingressClassName: gitlab-nginx
    rules:
    - host: minio.example.com
      http:
        paths:
        - backend:
            service:
              name: gitlab-minio-svc
              port:
                number: 9000
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - minio.example.com
      secretName: gitlab-minio-tls
  status:
    loadBalancer: {}
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.provider: nginx
      meta.helm.sh/release-name: gitlab
      meta.helm.sh/release-namespace: gitlab
      nginx.ingress.kubernetes.io/proxy-body-size: "0"
      nginx.ingress.kubernetes.io/proxy-buffering: "off"
      nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
      nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    creationTimestamp: "2026-04-13T15:05:45Z"
    generation: 1
    labels:
      app: registry
      app.kubernetes.io/managed-by: Helm
      chart: registry-0.7.0
      heritage: Helm
      release: gitlab
    name: gitlab-registry
    namespace: gitlab
    resourceVersion: "39190"
    uid: 6a36b6c8-5197-470d-9b3f-546295078ae5
  spec:
    ingressClassName: gitlab-nginx
    rules:
    - host: registry.example.com
      http:
        paths:
        - backend:
            service:
              name: gitlab-registry
              port:
                number: 5000
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - registry.example.com
      secretName: gitlab-registry-tls
  status:
    loadBalancer: {}
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.provider: nginx
      meta.helm.sh/release-name: gitlab
      meta.helm.sh/release-namespace: gitlab
      nginx.ingress.kubernetes.io/proxy-body-size: 512m
      nginx.ingress.kubernetes.io/proxy-connect-timeout: "15"
      nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
      nginx.ingress.kubernetes.io/service-upstream: "true"
    creationTimestamp: "2026-04-13T15:05:45Z"
    generation: 1
    labels:
      app: webservice
      app.kubernetes.io/managed-by: Helm
      chart: webservice-9.10.3
      gitlab.com/webservice-name: default
      heritage: Helm
      release: gitlab
    name: gitlab-webservice-default
    namespace: gitlab
    resourceVersion: "39187"
    uid: a448a45b-6fd7-4915-8fd1-22c72205072e
  spec:
    ingressClassName: gitlab-nginx
    rules:
    - host: gitlab.example.com
      http:
        paths:
        - backend:
            service:
              name: gitlab-webservice-default
              port:
                number: 8181
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - gitlab.example.com
      secretName: gitlab-gitlab-tls
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
