kubernetes/03-实践记录/minio-storage-NO.yaml
apiVersion: v1
kind: PersistentVolume
metadata:
  name: minio-nfs-pv
spec:
  capacity:
    storage: 10Gi
  accessModes:
    - ReadWriteMany  
  persistentVolumeReclaimPolicy: Retain
  storageClassName: "" 
  nfs:
    server: 172.23.171.172
    path: /data/nfs/minio

---
apiVersion: v1
kind: Namespace
metadata:
  name: minio
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: minio-nfs-pvc
  namespace: minio
spec:
  accessModes:
    - ReadWriteMany
  resources:
    requests:
      storage: 10Gi
  volumeName: minio-nfs-pv
